--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.0.9",
+    "@element-plus/icons-vue": "^2.1.0",
     "@icon-park/vue-next": "^1.4.2",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "echart": "^0.1.3",
     "echarts": "^5.4.0",
-    "element-plus": "^2.2.17",
-    "jquery": "^3.6.1",
-    "mitt": "^3.0.0",
+    "element-plus": "^2.4.1",
+    "jquery": "^3.7.1",
+    "mitt": "^3.0.1",
     "vue": "^3.2.40",
     "vue-router": "^4.0.3",
     "vue3-print-nb": "^0.1.4",
